Changed over to diffrent immage format

--- a/index.html
+++ b/index.html
@@ -61,16 +61,19 @@ footer {
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Wee Utilities</p>
-				
+				<a href="https://github.com/weeryan17/Wee-Utilities"><img src="images/tempWU.png"></a>
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 		</div>
 	</div>
@@ -80,15 +83,19 @@ footer {
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE">
 			</div>
 		</div>
 	</div>
