Change back because it doesn't relly matter

--- a/index.html
+++ b/index.html
@@ -61,19 +61,24 @@ footer {
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Wee Utilities</p>
-				<a href="https://github.com/weeryan17/Wee-Utilities"><img src="images/tempWU.png"></a>
+				<a href="https://github.com/weeryan17/Wee-Utilities"><img
+					src="images/tempWU.png" class="img-responsive" style="width: 100%"
+					alt="Image"></a>
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 		</div>
 	</div>
@@ -83,19 +88,23 @@ footer {
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE">
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 		</div>
 	</div>
