--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,7 @@
                 <li><a href="about.html">About</a></li>
                 <li class="active"><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="forms.html">Forms</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
 					<li><a href="login.html"><span
