--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ footer {
 					<li><a href="about.html">About</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
+                	<li><a href="forms.html">Forms</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="login.html"><span
