--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
         }
     </style>
     <title>gallery</title>
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
 <nav class="navbar navbar-inverse">
