login page work (mostly)

--- a/iframe-index.html
+++ b/iframe-index.html
@@ -32,18 +32,18 @@ footer {
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="index.html">Portfolio</a>
+				<a class="navbar-brand" href="">Portfolio</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="contact.html">Contact</a></li>
-                	<li><a href="forms.html">Forms</a></li>
+					<li class="active"><a href="">Home</a></li>
+					<li><a href="">About</a></li>
+					<li><a href="">Gallery</a></li>
+					<li><a href="">Contact</a></li>
+                	<li><a href="">Forms</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="login.html"><span
+					<li><a href=""><span
 							class="glyphicon glyphicon-log-in"></span> Login</a></li>
 				</ul>
 			</div>
@@ -69,7 +69,8 @@ footer {
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
-				<iframe src="iframe-index.html"></iframe>
+				<img src="http://placehold.it/150x80?text=No inseption for you!"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
