--- a/login.html
+++ b/login.html
@@ -57,8 +57,9 @@
     </div>
 </nav>
     <div class="login-page">
+      <p id="info"></p>
   <div class="form">
-    <form class="register-form">
+    <form class="register-form" id="register-form">
       <input type="text" placeholder="name"/>
       <input type="password" placeholder="password"/>
       <input type="text" placeholder="email address"/>
