--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
             padding: 25px;
         }
     </style>
-    <title>about</title>
+    <title>About</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
