--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             padding: 25px;
         }
     </style>
-    <title>contact</title>
+    <title>Contact</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
