--- a/gallery.html
+++ b/gallery.html
@@ -19,7 +19,7 @@
             padding: 25px;
         }
     </style>
-    <title>gallery</title>
+    <title>Gallery</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
