--- a/iframe-index.html
+++ b/iframe-index.html
@@ -63,9 +63,7 @@ footer {
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Wee Utilities</p>
-				<a href="https://github.com/weeryan17/Wee-Utilities"><img
-					src="images/tempWU.png" class="img-responsive" style="width: 100%"
-					alt="Image"></a>
+				<a href="https://github.com/weeryan17/Wee-Utilities"><img src="images/wu.png" class="img-responsive" style="width: 70%" alt="Image"></a>
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
