--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ footer {
 					<li><a href="about.html">About</a></li>
 					<li><a href="gallery.html">Gallery</a></li>
 					<li><a href="contact.html">Contact</a></li>
-                	<li><a href="forms.html">Forms</a></li>
+					<li><a href="forms.html">Forms</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="login.html"><span
@@ -56,16 +56,16 @@ footer {
 			<p>I'm just a simple programer</p>
 		</div>
 	</div>
-	
+
 	<div class="container-fluid bg-3 text-center">
 		<h3>Some of my Work</h3>
 		<br>
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Wee Utilities</p>
-				<a href="https://github.com/weeryan17/Wee-Utilities"><img
-					src="images/tempWU.png" class="img-responsive" style="width: 100%"
-					alt="Image"></a>
+				<a href="https://github.com/weeryan17/Wee-Utilities" class="link"
+					target="_blank"><img src="images/wu.png" class="img-responsive"
+					style="width: 70%" alt="Image"></a>
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
