--- a/iframe-index.html
+++ b/iframe-index.html
@@ -40,11 +40,11 @@ footer {
 					<li><a href="">About</a></li>
 					<li><a href="">Gallery</a></li>
 					<li><a href="">Contact</a></li>
-                	<li><a href="">Forms</a></li>
+					<li><a href="">Forms</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href=""><span
-							class="glyphicon glyphicon-log-in"></span> Login</a></li>
+					<li><a href=""><span class="glyphicon glyphicon-log-in"></span>
+							Login</a></li>
 				</ul>
 			</div>
 		</div>
@@ -56,14 +56,16 @@ footer {
 			<p>I'm just a simple programer</p>
 		</div>
 	</div>
-	
+
 	<div class="container-fluid bg-3 text-center">
 		<h3>Some of my Work</h3>
 		<br>
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Wee Utilities</p>
-				<a href="https://github.com/weeryan17/Wee-Utilities"><img src="images/wu.png" class="img-responsive" style="width: 70%" alt="Image"></a>
+				<a href="https://github.com/weeryan17/Wee-Utilities" class="link"
+					target="_blank"><img src="images/wu.png" class="img-responsive"
+					style="width: 70%" alt="Image"></a>
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
