--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ footer {
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
-				<iframe src="iframe-index.html"></iframe>
+				<iframe src="index.html"></iframe>
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
