more blank spots because why not

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ footer {
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
-				<iframe src="index.html"></iframe>
+				<iframe src="iframe-index.html"></iframe>
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
@@ -109,6 +109,33 @@ footer {
 			</div>
 		</div>
 	</div>
+	<br>
+	
+	<div class="container-fluid bg-3 text-center">
+	<div class="row">
+		<div class="col-sm-3">
+			<p>Some text..</p>
+			<img src="http://placehold.it/150x80?text=IMAGE"
+				class="img-responsive" style="width: 100%" alt="Image">
+		</div>
+		<div class="col-sm-3">
+			<p>Some text..</p>
+			<img src="http://placehold.it/150x80?text=IMAGE"
+				class="img-responsive" style="width: 100%" alt="Image">
+		</div>
+		<div class="col-sm-3">
+			<p>Some text..</p>
+			<img src="http://placehold.it/150x80?text=IMAGE"
+				class="img-responsive" style="width: 100%" alt="Image">
+		</div>
+		<div class="col-sm-3">
+			<p>Some text..</p>
+			<img src="http://placehold.it/150x80?text=IMAGE"
+				class="img-responsive" style="width: 100%" alt="Image">
+		</div>
+	</div>
+	</div>
+	
 	<br>
 	<br>
 
