made login page inacessible by normal methods
Small amout of stuff is now on the contact page

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/about.css">
     <script src="jsApi/jquery.min.js"></script>
     <script src="jsApi/bootstrap.min.js"></script>
     <style>
@@ -40,12 +41,18 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-					<li><a href="login.html"><span
-							class="glyphicon glyphicon-log-in"></span> Login</a></li>
-				</ul>
+				<!-- <ul class="nav navbar-nav navbar-right"> -->
+				<!-- 	<li><a href="login.html"><span -->
+				<!--			class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+				<!-- </ul>-->
         </div>
     </div>
 </nav>
+<div class="sectionHead">
+<div class="text-center" style="color:black">
+	<p>A little about me</p>
+</div>
+</div>
+<p>Nothing here yet</p>
 </body>
 </html>
