--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,10 @@
                 <li><a href="gallery.html">Gallery</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right">
-					<li><a href="login.html"><span
-							class="glyphicon glyphicon-log-in"></span> Login</a></li>
-				</ul>
+				<!-- <ul class="nav navbar-nav navbar-right"> -->
+				<!-- 	<li><a href="login.html"><span -->
+				<!--			class="glyphicon glyphicon-log-in"></span> Login</a></li>-->
+				<!-- </ul>-->
         </div>
     </div>
 </nav>
