Start of about page

--- a/chat.html
+++ b/chat.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/about.css">
     <script src="jsApi/jquery.min.js"></script>
     <script src="jsApi/bootstrap.min.js"></script>
     <style>
@@ -20,7 +19,7 @@
             padding: 25px;
         }
     </style>
-    <title>About</title>
+    <title>Chat</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
@@ -37,9 +36,10 @@
         <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav">
                 <li><a href="index.html">Home</a></li>
-                <li class="active"><a href="about.html">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li class="active"><a href="chat.html">Chat</a></li>
             </ul>
 				<!-- <ul class="nav navbar-nav navbar-right"> -->
 				<!-- 	<li><a href="login.html"><span -->
@@ -48,15 +48,5 @@
         </div>
     </div>
 </nav>
-<div class="sectionHead">
-<div class="text-center" style="color:black">
-	<p>A little about me</p>
-</div>
-</div>
-<br>
-<div class="text-center">
-<p>I am a programer who currently works alone (witch is why I'm talking about me and not a group).
-I like to play minecraft in my free time and work on random projects (like this website).</p>
-</div>
 </body>
 </html>
