added more text to the about page

--- a/about.html
+++ b/about.html
@@ -57,6 +57,8 @@
 <div class="text-center">
 <p>I am a programer who currently works alone (witch is why I'm talking about me and not a group).
 I like to play minecraft in my free time and work on random projects (like this website).</p>
+<br>
+<p>You will often see me and <a href="https://www.spigotmc.org/" class="link" target="_blank">spigot</a> just browsing stuff. I used to help out with plugin problems their</p>
 </div>
 </body>
 </html>
