--- a/index.html
+++ b/index.html
@@ -61,14 +61,42 @@ footer {
 		<br>
 		<div class="row">
 			<div class="col-sm-3">
-				<p>Wee Utilities</p>
+				<p>Wee Utilities (no public jar yet)</p>
 				<a href="https://github.com/weeryan17/Wee-Utilities" class="link"
 					target="_blank"><img src="images/wu.png" class="img-responsive"
 					style="width: 70%" alt="Image"></a>
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
-				<iframe src="iframe-index.html"></iframe>
+				<iframe src="iframe-index.html" height="300" width="100%"></iframe>
+			</div>
+			<div class="col-sm-3">
+				<p>Discord Groups</p>
+				<a href="https://www.spigotmc.org/resources/discord-groups.28764/"
+					class="link" target="_blank"> <img src="images/discord-groups.png"
+					class="img-responsive" style="width: 90%" style="height:90%" alt="Image">
+				</a>
+			</div>
+			<div class="col-sm-3">
+				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
+			</div>
+		</div>
+	</div>
+	<br>
+
+	<div class="container-fluid bg-3 text-center">
+		<div class="row">
+			<div class="col-sm-3">
+				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
+			</div>
+			<div class="col-sm-3">
+				<p>Some text..</p>
+				<img src="http://placehold.it/150x80?text=IMAGE"
+					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
 				<p>Some text..</p>
@@ -108,33 +136,7 @@ footer {
 			</div>
 		</div>
 	</div>
-	<br>
-	
-	<div class="container-fluid bg-3 text-center">
-	<div class="row">
-		<div class="col-sm-3">
-			<p>Some text..</p>
-			<img src="http://placehold.it/150x80?text=IMAGE"
-				class="img-responsive" style="width: 100%" alt="Image">
-		</div>
-		<div class="col-sm-3">
-			<p>Some text..</p>
-			<img src="http://placehold.it/150x80?text=IMAGE"
-				class="img-responsive" style="width: 100%" alt="Image">
-		</div>
-		<div class="col-sm-3">
-			<p>Some text..</p>
-			<img src="http://placehold.it/150x80?text=IMAGE"
-				class="img-responsive" style="width: 100%" alt="Image">
-		</div>
-		<div class="col-sm-3">
-			<p>Some text..</p>
-			<img src="http://placehold.it/150x80?text=IMAGE"
-				class="img-responsive" style="width: 100%" alt="Image">
-		</div>
-	</div>
-	</div>
-	
+
 	<br>
 	<br>
 
