working on chat

--- a/chat.html
+++ b/chat.html
@@ -48,5 +48,6 @@
         </div>
     </div>
 </nav>
+<iframe src="https://discordapp.com/channels/223983244612206592/223983244612206592"></iframe>
 </body>
 </html>
