--- a/index.html
+++ b/index.html
@@ -73,20 +73,23 @@ footer {
 			<div class="col-sm-3">
 				<p>Discord Groups</p>
 				<a href="https://www.spigotmc.org/resources/discord-groups.28764/"
-					class="link" target="_blank"> <img src="images/discord-groups.png"
-					class="img-responsive" style="width: 90%" style="height:90%" alt="Image">
+					class="link" target="_blank"> <img
+					src="images/discord-groups.png" class="img-responsive"
+					style="width: 90%" style="height:90%" alt="Image">
 				</a>
 			</div>
 			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
+				<p>Half Sleep server</p>
+
+				<a href="https://www.spigotmc.org/resources/half-sleep-server.16908/"
+					class="link" target="_blank"><img src="images/bed.png"
+					class="img-responsive" style="width: 100%" alt="Image"></a>
 			</div>
 		</div>
 	</div>
 	<br>
 
-	<div class="container-fluid bg-3 text-center">
+	<!--<div class="container-fluid bg-3 text-center">
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Some text..</p>
@@ -135,7 +138,7 @@ footer {
 					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<br>
 	<br>
