smaller api documentation updates.

--- a/docs-index.html
+++ b/docs-index.html
@@ -24,7 +24,7 @@
 	</nav>
 <div class="jumbotron">
 		<div class="container text-center">
-			<h1>Apidocs</h1>
+			<h1>API documentation</h1>
 			<p>Contains all my apis</p>
 			<p>The pre build methods are in the api packages</p>
 		</div>
