--- a/iframe-index.html
+++ b/iframe-index.html
@@ -68,24 +68,29 @@ footer {
 			</div>
 			<div class="col-sm-3">
 				<p>This website.... I don't think a link is nessisary</p>
-				<img src="http://placehold.it/150x80?text=No inseption for you!"
+				<img src="http://placehold.it/150x80?text=No_inseption_for_you!"
 					class="img-responsive" style="width: 100%" alt="Image">
 			</div>
 			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
+				<p>Discord Groups</p>
+				<a href="https://www.spigotmc.org/resources/discord-groups.28764/"
+					class="link" target="_blank"> <img
+					src="images/discord-groups.png" class="img-responsive"
+					style="width: 90%" style="height:90%" alt="Image">
+				</a>
 			</div>
 			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
+				<p>Half Sleep server</p>
+
+				<a href="https://www.spigotmc.org/resources/half-sleep-server.16908/"
+					class="link" target="_blank"><img src="images/bed.png"
+					class="img-responsive" style="width: 100%" alt="Image"></a>
 			</div>
 		</div>
 	</div>
 	<br>
 
-	<div class="container-fluid bg-3 text-center">
+	<!--<div class="container-fluid bg-3 text-center">
 		<div class="row">
 			<div class="col-sm-3">
 				<p>Some text..</p>
@@ -110,7 +115,7 @@ footer {
 		</div>
 	</div>
 	<br>
-	<br>
+	<br>-->
 
 	<footer class="container-fluid text-center">
 		<p>That's some of the stuff I made</p>
