--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/button.css">
 <script src="jsApi/jquery.min.js"></script>
 <script src="jsApi/bootstrap.min.js"></script>
+<script src="js/index.js"></script>
 <style>
 /* Remove the navbar's default margin-bottom and rounded borders */
 .navbar {
@@ -14,11 +16,6 @@
 	border-radius: 1;
 }
 
-/* Add a gray background color and some padding to the footer */
-footer {
-	background-color: #f2f2f2;
-	padding: 25px;
-}
 </style>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
@@ -36,116 +33,18 @@ footer {
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="gallery.html">Gallery</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li class="active" id="home"><button onClick="home();">Home</button></li>
+					<li class="none-active" id="about"><button onClick="about();">About</button></li>
+					<li class="none-active" id="gallery"><button onClick="gallery();">Gallery</button></li>
+					<li class="none-active" id="contact"><button onClick="contact();">Contact</button></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-				 	<li><a href="docs-index.html"><span
-							class="glyphicon glyphicon-log-in"></span> API Docs</a></li>
+				 	<li><button onclick="api();"><span
+							class="glyphicon glyphicon-log-in"></span> API Docs</button></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-
-	<div class="jumbotron">
-		<div class="container text-center">
-			<h1>weeryan17</h1>
-			<p>I'm just a simple programer</p>
-		</div>
-	</div>
-
-	<div class="container-fluid bg-3 text-center">
-		<h3>Some of my Work</h3>
-		<br>
-		<div class="row">
-			<div class="col-sm-3">
-				<p>Wee Utilities (no public jar yet)</p>
-				<a href="https://github.com/weeryan17/Wee-Utilities" class="link"
-					target="_blank"><img src="images/wu.png" class="img-responsive"
-					style="width: 70%" alt="Image"></a>
-			</div>
-			<div class="col-sm-3">
-				<p>This website.... I don't think a link is nessisary</p>
-				<iframe src="iframe-index.html" height="300" width="100%"></iframe>
-			</div>
-			<div class="col-sm-3">
-				<p>Discord Groups</p>
-				<a href="https://www.spigotmc.org/resources/discord-groups.28764/"
-					class="link" target="_blank"> <img
-					src="images/discord-groups.png" class="img-responsive"
-					style="width: 90%" style="height:90%" alt="Image">
-				</a>
-			</div>
-			<div class="col-sm-3">
-				<p>Half Sleep server</p>
-
-				<a href="https://www.spigotmc.org/resources/half-sleep-server.16908/"
-					class="link" target="_blank"><img src="images/bed.png"
-					class="img-responsive" style="width: 100%" alt="Image"></a>
-			</div>
-		</div>
-	</div>
-	<br>
-
-	<!--<div class="container-fluid bg-3 text-center">
-		<div class="row">
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-		</div>
-	</div>
-	<br>
-
-	<div class="container-fluid bg-3 text-center">
-		<div class="row">
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-			<div class="col-sm-3">
-				<p>Some text..</p>
-				<img src="http://placehold.it/150x80?text=IMAGE"
-					class="img-responsive" style="width: 100%" alt="Image">
-			</div>
-		</div>
-	</div> -->
-
-	<br>
-	<br>
-
-	<footer class="container-fluid text-center">
-		<p>That's some of the stuff I made</p>
-	</footer>
-
+	<iframe id="window" src="main.html" height="1000px" width="100%" style="border:none;"></iframe>
 </body>
 </html>
