--- a/about.html
+++ b/about.html
@@ -1,40 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/about.css">
-    <script src="jsApi/jquery.min.js"></script>
-    <script src="jsApi/bootstrap.min.js"></script>
-    <style>
-        /* Remove the navbar's default margin-bottom and rounded borders */
-        .navbar {
-            margin-bottom: 2;
-            border-radius: 1;
-        }
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/about.css">
+<script src="jsApi/jquery.min.js"></script>
+<script src="jsApi/bootstrap.min.js"></script>
+<style>
+/* Remove the navbar's default margin-bottom and rounded borders */
+.navbar {
+	margin-bottom: 2;
+	border-radius: 1;
+}
 
-        /* Add a gray background color and some padding to the footer */
-        footer {
-            background-color: #f2f2f2;
-            padding: 25px;
-        }
-    </style>
-    <title>About</title>
+/* Add a gray background color and some padding to the footer */
+footer {
+	background-color: #f2f2f2;
+	padding: 25px;
+}
+</style>
+<title>About</title>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
 <body>
-<div class="sectionHead">
-<div class="text-center" style="color:black">
-	<p>A little about me</p>
-</div>
-</div>
-<br>
-<div class="text-center">
-<p>I am a programer who currently works alone (witch is why I'm talking about me and not a group).
-I like to play minecraft in my free time and work on random projects (like this website).</p>
-<br>
-<p>You will often see me and <a href="https://www.spigotmc.org/" class="link" target="_blank">spigot</a> just browsing stuff. I used to help out with plugin problems their</p>
-</div>
+	<div class="sectionHead">
+		<div class="text-center" style="color: black">
+			<p>A little about me</p>
+		</div>
+	</div>
+	<br>
+	<div class="text-center">
+		<p>I am a programer who currently works alone (witch is why I'm
+			talking about me and not a group). I like to play minecraft in my
+			free time and work on random projects (like this website).</p>
+		<br>
+		<p>
+			You will often see me and <a href="https://www.spigotmc.org/"
+				class="link" target="_blank">spigot</a> just browsing stuff. I used
+			to help out with plugin problems their
+		</p>
+	</div>
 </body>
 </html>
