--- a/docs-index.html
+++ b/docs-index.html
@@ -9,14 +9,14 @@
 <script src="jsApi/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="jumbotron">
+	<div class="jumbotron">
 		<div class="container text-center">
 			<h1>API documentation</h1>
 			<p>Contains all my apis</p>
 			<p>The pre build methods are in the api packages</p>
 		</div>
 	</div>
-	
+
 	<div class="container-fluid bg-3 text-center">
 		<div class="row">
 			<div class="col-sm-3">
@@ -24,7 +24,8 @@
 				<iframe src="docs/wee-doc/index.html"></iframe>
 			</div>
 			<div class="col-sm-3">
-				<a href="docs/staffchat-doc/index.html" target="_blank" class="link">Staff Chat</a>
+				<a href="docs/staffchat-doc/index.html" target="_blank" class="link">Staff
+					Chat</a>
 				<iframe src="docs/staffchat-doc/index.html"></iframe>
 			</div>
 			<!--<div class="col-sm-3">
