--- a/iframe-index.html
+++ b/iframe-index.html
@@ -82,7 +82,8 @@ footer {
 			<div class="col-sm-3">
 				<p>Half Sleep server</p>
 
-				<a href="https://www.spigotmc.org/resources/half-sleep-server.16908/"
+				<a
+					href="https://www.spigotmc.org/resources/half-sleep-server.16908/"
 					class="link" target="_blank"><img src="images/bed.png"
 					class="img-responsive" style="width: 100%" alt="Image"></a>
 			</div>
