--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	margin-bottom: 2;
 	border-radius: 1;
 }
-
 </style>
 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 </head>
@@ -35,16 +34,20 @@
 				<ul class="nav navbar-nav">
 					<li class="active" id="home"><button onClick="home();">Home</button></li>
 					<li class="none-active" id="about"><button onClick="about();">About</button></li>
-					<li class="none-active" id="gallery"><button onClick="gallery();">Gallery</button></li>
-					<li class="none-active" id="contact"><button onClick="contact();">Contact</button></li>
+					<li class="none-active" id="gallery"><button
+							onClick="gallery();">Gallery</button></li>
+					<li class="none-active" id="contact"><button
+							onClick="contact();">Contact</button></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-				 	<li><button onclick="api();"><span
-							class="glyphicon glyphicon-log-in"></span> API Docs</button></li>
+					<li><button onclick="api();">
+							<span class="glyphicon glyphicon-log-in"></span> API Docs
+						</button></li>
 				</ul>
 			</div>
 		</div>
 	</nav>
-	<iframe id="window" src="main.html" height="1000px" width="100%" style="border:none;"></iframe>
+	<iframe id="window" src="main.html" height="1000px" width="100%"
+		style="border: none;"></iframe>
 </body>
 </html>
